--- a/style.css
+++ b/style.css
@@ -5,25 +5,38 @@ html {
 body{
   margin: 0;
   padding: 0;
+  background-color: aquamarine;
 
 }
-.nav-bar{
+.nav-links{
   background-color: gray;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 70%;
+  margin: 10rem auto;
+  border-radius: 2rem;
 }
 .nav-items{
   display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  margin: auto;
 }
 .nav-item{
   background-color: lightcoral;
   list-style-type: none;
   padding: 0.5rem;
-  margin: 0.25rem;
+  margin: 0.5rem auto;
   border-radius: 0.5rem;
   font-size: 1.5rem;
+}
+.nav-item a{
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 2rem;
 }
