--- a/Project/style.css
+++ b/Project/style.css
@@ -5,25 +5,104 @@ html {
 body{
   margin: 0;
   padding: 0;
-
+  background-color: #efefef;
 }
-.nav-bar{
-  background-color: gray;
+/* navigation  */
+header{
+  width: 100%;
+  background-color: #fff;
+}
+.nav-links {
+   margin:0;
+   padding: 0;
+}
+.nav-link {
+  display: inline-block;
+  padding: 1.25rem;
+  cursor: pointer;
+}
+.nav-link > a {
+  text-decoration: none;
+}
+.container{
+  display:flex;
+}
+/* side navigation */
+.side-nav{
+  width: 15%;
+  height: 100vh;
+  background-color: #fff;
+  padding: 0.6rem;
+}
+.dp{
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border-radius: 50%;
+  background-color: aqua;
+}
+.personal-details{
+  text-align: center;
+}
+.social-network{
+  background-color: yellow;
+}
+.other-details{
+  margin-left: 1.5rem;
+}
+.languages{
+  margin-left: 1.5rem;
+}
+.skills{
+  margin-left: 1.5rem;
+}
+/* main section */
+.main{
+  width: 80%;
+}
+.intro{
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  background-color: #FFF;
+  width: 65%;
+  margin: 0 auto;
+  height:300px;
+  padding: 50px;
 }
-.nav-items{
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
+.fs-span{
+  color: dodgerblue;
 }
-.nav-item{
-  background-color: lightcoral;
-  list-style-type: none;
-  padding: 0.5rem;
-  margin: 0.25rem;
-  border-radius: 0.5rem;
-  font-size: 1.5rem;
+.basic-details{
+  width:40%;
+}
+.hire-me{
+  background-color: dodgerblue;
+  border: none;
+  width: 7.5rem;
+  height: 2.5rem;
+  cursor:pointer;
+  color: white;
+  border-radius: 0.75rem;
+}
+.my-image{
+  width: 60%;
+}
+.my-img{
+  width: 25rem;
+  height: 20rem;
+  margin: 0 auto;
+}
+/* Education section */
+.edu-section{
+  text-align: center;
+}
+.edu-para{
+  width: 30rem;
+  opacity: 0.5;
+  margin: 0 auto;
+}
+.edu-box{
+  margin: 20px auto;
+  width: 80%;
+  height: 500px;
+  background-color: #fff;
 }
